--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@uniswap/sdk-core",
+  "name": "@pollum-io/sdk-core",
   "license": "MIT",
-  "version": "3.2.2",
-  "description": "⚒️ An SDK for building applications on top of Uniswap V3",
+  "version": "0.0.1",
+  "description": "⚒️ An SDK for building applications on top of Pegasys V2",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/Uniswap/uniswap-sdk-core.git",
+  "repository": "https://github.com/pegasys-io/sdk-core.git",
   "keywords": [
-    "uniswap",
-    "ethereum"
+    "pegasys",
+    "syscoin"
   ],
   "module": "dist/sdk-core.esm.js",
   "scripts": {
