chore: add computeZksyncCreate2Address

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pollum-io/sdk-core",
   "license": "MIT",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "⚒️ An SDK for building applications on top of Pegasys V2",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@ethersproject/address": "^5.0.2",
+    "@ethersproject/strings": "^5.8.0",
     "big.js": "^5.2.2",
     "decimal.js-light": "^2.5.0",
     "jsbi": "^3.1.4",
